--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon",
+    "kill-port": "npx kill-port 8080",
+    "start": "npm run kill-port && nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
